# poly-humaneval

./: LICENSE  README.md
benchmark/: poly_humaneval.testdsl  poly_humaneval_sol.json
evaluation/: check_gold_solution.sh  evaluate_generated.sh  shell.nix
evaluation/project-templates/with-dependencies/cpp/: CMakeLists.txt  conan_profile  conanfile.py  polyeval_config.yaml
evaluation/project-templates/with-dependencies/cpp/src/: main.cpp  target.cpp  target.h
evaluation/project-templates/with-dependencies/cpp/src/utils/: utils.cpp  utils.h
llm_generated_translations/: RQ1-2_CodeGeeX2-6B.json  RQ1-2_CodeGen25-7B-Multi.json  RQ1-2_CodeLlama-34B.json  RQ1-2_CodeLlama-7B.json  RQ1-2_StarCoderBase-7B.json  RQ1-2_StarCoderBase.json  RQ1-4_CodeGen25-7B-Instruct.json  RQ1-4_CodeGen25-7B-Mono.json  RQ1-4_CodeLlama-13B-Instruct.json  RQ1-4_CodeLlama-13B-Python.json  RQ1-4_CodeLlama-34B-Instruct.json  RQ1-4_CodeLlama-34B-Python.json  RQ1-4_CodeLlama-7B-Instruct.json  RQ1-4_CodeLlama-7B-Python.json  RQ1-4_OctoCoder.json  RQ1-4_StarChat-Alpha.json  RQ1-4_StarChat-Beta.json  RQ1-4_StarCoder.json  RQ1-4_StarCoderPlus.json  RQ2-1_Base-Prompt.json  RQ2-1_Line-By-Line.json  RQ2-1_With-Required-Imports.json  RQ2-1_With-Target-Signature.json  RQ2-2_CodeLLama-13B_one-shot.json  RQ2-2_CodeLLama-13B_zero-shot.json  RQ2-2_CodeLLama-34B_one-shot.json  RQ2-2_CodeLLama-34B_zero-shot.json  RQ2-2_CodeLLama-7B_one-shot.json  RQ2-2_CodeLLama-7B_zero-shot.json  RQ3-1_CodeLlama-13B_Intermediary-C#.json  RQ3-1_CodeLlama-13B_Intermediary-C++.json  RQ3-1_CodeLlama-13B_Intermediary-Dart.json  (+20 more)
(+199 files in other folders)
